Added Login & Profile

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-OPENAI_API_KEY="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"
+ELEVEN_LABS_API_KEY="6dcd742d06bb7dcff6e969770913c0c7"
+OPENAI_API_KEY="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"
 MONGODB_URL="mongodb+srv://bhekeni:kenzo@BBQ8@cluster0.vhzgnzg.mongodb.net/?retryWrites=true&w=majority"
 
 CLOUDINARY_CLOUD_NAME="dsdhranid"
