--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.0",
+    "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "howler": "^2.2.3",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
